# evil-workspace

./: Cargo.toml  README.md  RELEASES.md
.github/workflows/: release.yml  schema.yml
many-bin/: Cargo.toml  README.md
many-bin/wix/: main.wxs
some-cdylib/: Cargo.toml
some-lib/: Cargo.toml
test-bin/: Cargo.toml
third-bin/: Cargo.toml
third-bin/wix/: main.wxs
wix/: main.wxs
