[package]
name = "many-bin"
version = "0.8.3"
edition = "2021"
authors = ["Gankra"]
repository = "https://github.com/gankra/evil-workspace/"
description = "many pure evil"

[package.metadata.wix]
upgrade-guid = "069E8F2E-C7EE-4F9D-8153-48A294220F8D"
path-guid = "D113C62A-CE4F-4448-9ABE-FF1DE5E105CB"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-many-bin"

[dependencies]

