[package]
name = "third-bin"
version = "0.8.1"
edition = "2021"
authors = ["Gankra"]

[package.metadata.wix]
upgrade-guid = "68E18E3E-559F-473B-ACD1-4CDB4F094B8F"
path-guid = "583AAF58-EA9E-44D4-BC90-E6786146317E"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
